hphp/hack/test/typecheck/expression_trees/pipe3.php.exp
ERROR: File "pipe3.php", line 16, characters 48-49:
Invalid argument (Typing[4110])
  File "pipe3.php", line 9, characters 32-41:
  Expected `int`
  File "pipe3.php", line 9, characters 67-79:
  But got `string`
ERROR: File "pipe3.php", line 18, characters 10-12:
Invalid return type (Typing[4110])
  File "pipe3.php", line 13, characters 36-47:
  Expected `float`
  File "pipe3.php", line 9, characters 67-79:
  But got `string`
  File "expr_tree.php", line 88, characters 26-31:
    via this generic `TInfer`
  File "expr_tree.php", line 496, characters 52-52:
    via this generic `T`
  File "expr_tree.php", line 82, characters 26-31:
    via this generic `TInfer`
